# web_benchmark

./: .gitignore
jmeter/: RestinioBenchmark.jmx
netty/: build.gradle
netty/src/main/java/ru/zuma/: CustomHttpServerHandler.java  EndpointHttpServerHandler.java  HttpServer.java  NettyRequestUtil.java  RequestUtils.java
netty/src/main/java/ru/zuma/endpoint/: RestEndpoint.java  RestEndpointBase.java  SnippetEndpoint.java
netty/src/main/java/ru/zuma/http/: HttpMethod.java  HttpRequest.java  HttpResponse.java
netty/src/main/java/ru/zuma/model/: Snippet.java
netty/src/main/java/ru/zuma/storage/: MapSnippetService.java  SnippetService.java
restinio/: CMakeLists.txt  app_args.hpp  dto.h  json_converter.h  main.cpp  readme.md  request_handler.h  server_settings_traits.h  single_handler_bench.cpp  snippet_service.h
restinio/cmake/: asio-targets.cmake
restinio/restinio/: cmake.patch
